update and modify some changes. working with company info in UserViewController and company-info htmls.(uncompleted)